# metrico-cli

./: .gitignore  LICENSE  README.rst  pyproject.toml
cli/: __main__.py  utils.py
cli/cmd/: __init__.py  add.py  hunt.py  show.py  tools.py
